<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BitwiseCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="delete_button">CLR</string>
    <string name="equate_button">&#61;</string>
    <string-array name="radix_array">
        <item>Hexadecimal</item>
        <item>Decimal</item>
        <item>Octal</item>
        <item>Binary</item>
    </string-array>
    <string-array name="bitwise_array">
        <item>&#60;&#60;</item> <!-- shift left -->
        <item>&amp;</item> <!-- and -->
        <item>&#94;</item> <!-- xor -->
        <item>&#62;&#62;</item> <!-- shift right -->
        <item>|</item> <!-- or -->
        <item>&#126;</item> <!-- not -->
    </string-array>
    <string-array name="pemdas_array">
        <item>&#43;</item> <!-- add -->
        <item>\u00d7</item> <!-- multiply -->
        <item>&#37;</item> <!-- modulus -->
        <item>-</item> <!-- subtract -->
        <item>&#247;</item> <!-- divide -->
        <item>&#46;</item> <!-- space -->
    </string-array>
    <string-array name="numbers_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
    </string-array>

    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="digitA">A</string>
    <string name="digitB">B</string>
    <string name="digitC">C</string>
    <string name="digitD">D</string>
    <string name="digitE">E</string>
    <string name="digitF">F</string>
    <string name="placeholder"></string>
    <string name="add">&#43;</string> <!-- add -->
    <string name="mult">&#215;</string> <!-- multiply -->
    <string name="mod">&#37;</string> <!-- modulus -->
    <string name="sub">&#8722;</string> <!-- subtract -->
    <string name="div">&#247;</string> <!-- divide -->
    <string name="decimal">&#46;</string> <!-- decimal point -->
    <string name="shL">&#60;&#60;</string> <!-- shift left -->
    <string name="and">&amp;</string> <!-- and -->
    <string name="xor">&#94;</string> <!-- xor -->
    <string name="shR">&#62;&#62;</string> <!-- shift right -->
    <string name="or">|</string> <!-- or -->
    <string name="not">&#126;</string> <!-- not -->

</resources>