<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/digit7"
            style="@style/digit_button_style"
            android:text="@string/digit7" />

        <Button
            android:id="@+id/digit8"
            style="@style/digit_button_style"
            android:text="@string/digit8" />

        <Button
            android:id="@+id/digit9"
            style="@style/digit_button_style"
            android:text="@string/digit9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/digit4"
            style="@style/digit_button_style"
            android:text="@string/digit4" />

        <Button
            android:id="@+id/digit5"
            style="@style/digit_button_style"
            android:text="@string/digit5" />

        <Button
            android:id="@+id/digit6"
            style="@style/digit_button_style"
            android:text="@string/digit6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/digit1"
            style="@style/digit_button_style"
            android:text="@string/digit1" />

        <Button
            android:id="@+id/digit2"
            style="@style/digit_button_style"
            android:text="@string/digit2" />

        <Button
            android:id="@+id/digit3"
            style="@style/digit_button_style"
            android:text="@string/digit3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/placeholder"
            style="@style/digit_button_style"
            android:text="@string/placeholder" />

        <Button
            android:id="@+id/digit0"
            style="@style/digit_button_style"
            android:text="@string/digit0" />

        <Button
            android:id="@+id/placeholder"
            style="@style/digit_button_style"
            android:text="@string/placeholder" />
    </LinearLayout>

</LinearLayout>