<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal" >

        <Button
            android:id="@+id/shL"
            style="@style/button_style"
            android:text="@string/shL" />
        <Button
            android:id="@+id/shR"
            style="@style/button_style"
            android:text="@string/shR" />
        <Button 
            android:id="@+id/mod"
            style="@style/button_style"
            android:text="@string/mod"/>
        <Button
            android:id="@+id/dec"
            style="@style/button_style"
            android:text="@string/decimal" />
</LinearLayout>